# maldev

./: .gitignore  Cargo.toml  README.md  build.rs
assets/payloadplacement/: resources.rc
src/: encryption.rs  main.rs  obfuscation.rs  payloadplacement.rs
src/encryption/: aes.rs
