[package]
name = "maldev"
version = "0.1.0"
edition = "2021"


[dependencies]
ntapi = "0.4.1"
rc4 = "0.1.0"
user32-sys = "0.2.0"
winapi = { version = "0.3.9", features = [
    "winuser",
    "debugapi",
    "winerror",
    "wininet",
    "winhttp",
    "synchapi",
    "securitybaseapi",
    "wincrypt",
    "psapi",
    "tlhelp32",
    "heapapi",
    "shellapi",
    "memoryapi",
    "processthreadsapi",
    "errhandlingapi",
    "winbase",
    "handleapi",
    "synchapi",
] }

[build-dependencies]
embed-resource = "2.4"

[features]
payloadplacement = []
encryption = []
